h4_vision/build_errors.txt
   Compiling h4_vision v0.1.0 (D:\PROJECTS\h4_GameHack\h4_vision)
error[E0382]: borrow of moved value: `ui_handle`
   --> h4_vision\src\main.rs:703:19
    |
125 |     let ui_handle = ui.as_weak();
    |         --------- move occurs because `ui_handle` has type `slint::Weak<MainWindow>`, which does not implement the `Copy` trait
...
664 |     ui.on_manual_scan_requested(move |addr, type_str, _val| {
    |                                 --------------------------- value moved into closure here
...
694 |         if let Some(u) = ui_handle.upgrade() {
    |                          --------- variable moved due to use in closure
...
703 |     let ui_save = ui_handle.clone();
    |                   ^^^^^^^^^ value borrowed here after move

error[E0382]: borrow of moved value: `all_scan_results`
   --> h4_vision\src\main.rs:704:20
    |
218 |     let all_scan_results = Arc::new(Mutex::new(Vec::<h4_shared::ScanResult>::new()));
    |         ---------------- move occurs because `all_scan_results` has type `Arc<std::sync::Mutex<Vec<ScanResult>>>`, which does not implement the `Copy` trait
...
664 |     ui.on_manual_scan_requested(move |addr, type_str, _val| {
    |                                 --------------------------- value moved into closure here
...
683 |         let mut rm = all_scan_results.lock().unwrap();
    |                      ---------------- variable moved due to use in closure
...
704 |     let res_save = all_scan_results.clone();
    |                    ^^^^^^^^^^^^^^^^ value borrowed here after move
    |
help: consider cloning the value before moving it into the closure
    |
664 ~     let value = all_scan_results.clone();
665 ~     ui.on_manual_scan_requested(move |addr, type_str, _val| {
666 |         let addr_val = if addr.to_lowercase().starts_with("0x") {
...
683 |         
684 ~         let mut rm = value.lock().unwrap();
    |

error[E0382]: borrow of moved value: `poll_addresses`
   --> h4_vision\src\main.rs:715:21
    |
212 |     let poll_addresses = Arc::new(Mutex::new(Vec::<(usize, h4_shared::ValueType)>::new()));
    |         -------------- move occurs because `poll_addresses` has type `Arc<std::sync::Mutex<Vec<(usize, ValueType)>>>`, which does not implement the `Copy` trait
...
664 |     ui.on_manual_scan_requested(move |addr, type_str, _val| {
    |                                 --------------------------- value moved into closure here
...
684 |         let mut pm = poll_addresses.lock().unwrap();
    |                      -------------- variable moved due to use in closure
...
715 |     let poll_load = poll_addresses.clone();
    |                     ^^^^^^^^^^^^^^ value borrowed here after move
    |
help: consider cloning the value before moving it into the closure
    |
664 ~     let value = poll_addresses.clone();
665 ~     ui.on_manual_scan_requested(move |addr, type_str, _val| {
666 |         let addr_val = if addr.to_lowercase().starts_with("0x") {
...
684 |         let mut rm = all_scan_results.lock().unwrap();
685 ~         let mut pm = value.lock().unwrap();
    |

For more information about this error, try `rustc --explain E0382`.
error: could not compile `h4_vision` (bin "h4_vision") due to 3 previous errors
